--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,37 @@
+@import "tailwindcss";
+
+.text-font {
+  font-family: "Jersey 10", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.text-shadow {
+    text-shadow: 0px 4px 0px #5F6A77
+}
+
+::-webkit-scrollbar {
+    width:8px;
+}
+
+::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+::-webkit-scrollbar-button {
+    display: none;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #7C7C7C;
+    border-radius: 6px;
+}
+
+.editor-left-pad .monaco-editor .view-lines {
+    padding-left: 10px;
+}
+
+
 :root { font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif; }
 body { margin: 0; background: #f8f9fa; color: #222; }
 .wrap { padding: 32px; max-width: 800px; margin: auto; }
